# barracuda-navigation

./: .gitignore  .gitmodules  :  AGENTS.md  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh
.github/workflows/: docker-publish.yml
catkin_ws/src/barracuda_navigation/: CMakeLists.txt  package.xml
catkin_ws/src/barracuda_navigation/launch/: barracuda_navigation.launch  rrt_target_demo.launch  waypoint_interpolator_demo.launch
catkin_ws/src/barracuda_navigation/scripts/: no_collision_server.py  publish_target_point.py  target_odometry_publisher.py  waypoint_interpolator.py  waypoint_test_publisher.py
