<?xml version="1.0"?>
<package format="2">
  <name>barracuda_navigation</name>
  <version>0.1.0</version>
  <description>Navigation package for Barracuda robot system</description>

  <!-- Maintainer info -->
  <maintainer email="your.email@example.com">Your Name</maintainer>

  <!-- License -->
  <license>MIT</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Runtime dependencies for Python nodes -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>barracuda_msgs</exec_depend>

  <export>
  </export>
</package>
